--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- <nav class="nav-menu ">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Beranda</span></a></li>
-          <li><a href="menu.php"><i class="bx bx-user"></i> <span>Profil</span></a></li>
+          <li><a href="menu.html"><i class="bx bx-user"></i> <span>Profil</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Program Kerja</span></a></li>
           <li><a href="#services"><i class="bx bx-server"></i>Kerja Sama</a></li>
           <li><a class="uji" href=""><i class="bx bx-envelope"></i>Kontak</a><span class="caret"></span>
@@ -78,7 +78,7 @@
       <nav class="nav-menu ">
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i></a></li>
-          <li><a href="menu.php"><span>Profil</span></a></li>
+          <li><a href="menu.html"><span>Profil</span></a></li>
           <li><a href="#resume"><span>Program Kerja</span></a></li>
           <li><a href="#services">Kerja Sama</a></li>
           <li><a class="uji" href="">Kontak</a><span class="caret"></span>
@@ -125,7 +125,7 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="posting.php" class="btn btn-primary">Lihat Postingan Lainnya</a>
+                <a href="posting.html" class="btn btn-primary">Lihat Postingan Lainnya</a>
               </div>
             </div>
           </div>
@@ -147,12 +147,12 @@
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's content.</p>
-                <a href="posting.php" class="btn btn-primary">Lihat Postingan Lainnya</a>
+                <a href="posting.html" class="btn btn-primary">Lihat Postingan Lainnya</a>
               </div>
             </div>
           </div>
           <div class="col-lg-12 d-flex" style="margin-top: 10px;" data-aos="fade-up">
-            <a href="semua-posting.php" class="btn btn-primary">Lihat Postingan Lainnya</a>
+            <a href="semua-posting.html" class="btn btn-primary">Lihat Postingan Lainnya</a>
           </div>
         </div>
 
@@ -176,7 +176,7 @@
                 <p>Contoh Kegiatan yang panjang namanyaaaaa gimana oca</p>
                 <a href="assets/img/Picture2.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Contoh Kegiatan yang panjang namanyaaaaa gimana oca"><i class="bx bx-plus"></i></a>
-                <a href="galeri.php" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="galeri.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
                 <p>Contoh Kegiatan yang panjang namanyaaaaa gimana oca</p>
                 <a href="assets/img/Picture3.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Contoh Kegiatan yang panjang namanyaaaaa gimana oca"><i class="bx bx-plus"></i></a>
-                <a href="galeri.php" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="galeri.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
                 <p>Contoh Kegiatan yang panjang namanyaaaaa gimana oca</p>
                 <a href="assets/img/Picture4.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Contoh Kegiatan yang panjang namanyaaaaa gimana oca"><i class="bx bx-plus"></i></a>
-                <a href="galeri.php" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="galeri.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
